<resources>
    <string name="app_name">DbCleaner for Whatsapp</string>
    <string name="title_whatsapp">WhatsApp</string>
    <string name="title_whatsapp_business">WhatsApp Business</string>
    <string name="app_undetected">Not detected</string>
    <string name="app_detected">Detected</string>
    <string name="clear_text">Clear</string>
    <string name="status_auto_clean">Auto Cleanup : %1$s</string>
    <string name="status_clean_info">Info : %1$s</string>
    <string name="status_clean_schedule">Schedule service : %1$s</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_history">Run History</string>
    <string name="menu_settings">Settings</string>
    <string name="storage_denied">Storage Permission Denied</string>
    <string name="clear_nothing">Nothing to clear</string>
    <string name="alert_clear_title">Remove files?</string>
    <string name="alert_clear_summary">Clear %1$d files of %2$s from storage?
        The main whatsApp backup file will be kept. </string>

    <string name="pref_auto_clean">Automatic cleanup</string>
    <string name="pref_auto_clean_summary">Schedule the app to automatically clean up
    the database files</string>
    <string name="exit">Exit</string>

    <string name="language">Language</string>
    <string name="select_language">Select Language</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="main">Main</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="off">OFF</string>
    <string name="enabled">Enabled</string>
    <string name="files_cleared">Files Cleared successfully</string>
    <string name="not_running">Not Running</string>
    <string name="running">Running</string>
    <string name="auto_clean_activated">Auto-clean activated</string>

    <string name="select_clean">Auto-clean app files</string>
    <string name="select_clean_files">Choose which app files to auto-clean</string>
    <string name="select_clean_summary">Select which app database files to clean-up automatically</string>

    <string-array name="settings_auto_entries">
        <item>OFF</item>
        <item>Everyday at 3:00 AM</item>
        <item>Once per week on Friday at 3:00 AM</item>
    </string-array>

    <string-array name="settings_auto_values">
        <item>off</item>
        <item>daily</item>
        <item>weekly</item>
    </string-array>


    <string-array name="list_languages">
        <item>English (default)</item>
        <item>Portuguese</item>
        <item>Northern Sotho</item>
    </string-array>

    <string-array name="languages_values">
        <item>en</item>
        <item>pt</item>
        <item>nso</item>
    </string-array>

    <string-array name="app_clean_entries">
        <item>WhatsApp</item>
        <item>WhatsApp Business</item>
    </string-array>

    <string-array name="app_clean_values">
        <item>wa</item>
        <item>wb</item>
    </string-array>

    <string-array name="app_clean_default">
        <item>wa</item>
        <item>x</item>
    </string-array>


</resources>