<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true"
        android:layout_gravity="start|top"
        android:paddingBottom="100dp">

        <LinearLayout
            android:id="@+id/linear_layout_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/header_whatsapp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_whatsapp"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/not_detected_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_undetected" />

            <ListView
                android:id="@+id/whatsapp_listview"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:nestedScrollingEnabled="true"/>

            <Button
                android:id="@+id/clear_whatsapp_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:text="@string/clear_text"
                android:visibility="invisible" />

            <!-- WhatsApp Business -->

            <TextView
                android:id="@+id/header_whatsapp_business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/title_whatsapp_business"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/not_detected_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_undetected" />

            <ListView
                android:id="@+id/whatsapp_business_listview"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:nestedScrollingEnabled="true" />

            <Button
                android:id="@+id/clear_business_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:text="@string/clear_text"
                android:visibility="invisible" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/view_permission_denied"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center"
        android:text="@string/storage_denied"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/bottom_status_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#B2D1B4"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/auto_clean_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_auto_clean"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/auto_clean_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_clean_info"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/auto_clean_scheduler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_clean_info" />

    </LinearLayout>

</FrameLayout>